RESOLVED FIXED110220
[Qt][WK2] ASSERT(node) hit in WebPage::findZoomableAreaForPoint if no zoomable area found
https://bugs.webkit.org/show_bug.cgi?id=110220
Summary [Qt][WK2] ASSERT(node) hit in WebPage::findZoomableAreaForPoint if no zoomabl...
Andras Becsi
Reported 2013-02-19 07:03:53 PST
[Qt][WK2] ASSERT(node) hit in WebPage::findZoomableAreaForPoint if no zoomable area found
Attachments
Patch (1.81 KB, patch)
2013-02-19 07:04 PST, Andras Becsi
no flags
Andras Becsi
Comment 1 2013-02-19 07:04:41 PST
Allan Sandfeld Jensen
Comment 2 2013-02-19 07:22:00 PST
Comment on attachment 189082 [details] Patch LGTM, needs owner approval.
Allan Sandfeld Jensen
Comment 3 2013-02-19 07:43:27 PST
(In reply to comment #2) > (From update of attachment 189082 [details]) > LGTM, needs owner approval. On second thought. It is a trivial patch. Land it.
Andras Becsi
Comment 4 2013-02-19 08:28:06 PST
Comment on attachment 189082 [details] Patch Clearing flags on attachment: 189082 Committed r143335: <http://trac.webkit.org/changeset/143335>
Andras Becsi
Comment 5 2013-02-19 08:28:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.