[Qt][WK2] ASSERT(node) hit in WebPage::findZoomableAreaForPoint if no zoomable area found https://bugs.webkit.org/show_bug.cgi?id=110220

Reviewed by Allan Sandfeld Jensen.

If EventHandler::bestZoomableAreaForTouchPoint was unsuccessfull, eg.
no node was found for a given point, we hit ASSERT(node).
We should only assert for a valid node if a zoomable area was found.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::findZoomableAreaForPoint):

Canonical link: https://commits.webkit.org/128522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143335 268f45cc-cd09-0410-ab3c-d52691b4dbfc